# cool-compiler-2021

./: .directory  .gitignore  .pylintrc  Dockerfile  Informe.md  LICENSE  Makefile  Pipfile  README.md  Readme.md  Report.md  a.txt  ast_nodes.py  automaton_class.py  cool_grammar.py  cool_tokenizer.py  cool_visitor.py  docker-compose.yml  errors.py  grades.md  grammar_class.py  main.cil  main.cl  main.py  main_regex.py  methods.py  notes.txt  out  output.txt  parser_automatons.py  parser_regex.py  pyproject.toml  requirements.txt  shift_reduce_parsers.py  test.cl  test.mips  test.py  test.s  test.sh  token_class.py
.ipynb_checkpoints/: cp1-checkpoint.ipynb
cmp/: ast.py  automata.py  evaluation.py  grammar.py  lexer.py  nfa_dfa.py  regex.py  semantic.py  tools.py  tools2.py  type_builder.py  type_checker.py  type_collector.py  type_inferencer.py  utils.py
customized_tests/: run_pipeline.py  test_11.py  test_12.py  test_4.py  test_5.py  test_6.py  test_7.py  test_IO.py  test_adr.py  test_cycher.py  test_cycher2.py  test_hello_world.cl  test_mnotfound.py  test_parser2.py  test_parser4.py  test_reducer2.py  test_reducer3.py  test_type_builder.py  test_type_collector.py
doc/: .team.yml.kate-swp  AST.txt  Cool2Cil.md  Informe  Informe.md  Informe.tex  Manual de CIL.md  PLY (Python Lex-Yacc).mhtml  PP_report.md  Practicas.doc  Readme.md  Register_use_convention.md  Report.md  TODO.md  Test Situation.md  Tips.md  cool-cil.txt  mips tips  report.md  reporte.md  team.yml
examples/: abort.cl  basic_arithmetic.cl  boxing_unboxing.cl  case.cl  complex.cl  fibonacci.cl  flow_control.cl  hello_world.cl  new.cl  (+10 more)
(+1896 files in other folders)
