[tool.poetry]
name = "cool-compiler-2021"
version = "0.1.0"
description = ""
authors = ["dany"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
pytest-ordering = "^0.6"
sly = "^0.4"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
